--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,8 +7,8 @@
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
+  <button id="theme-toggle">Toggle Theme</button>
   <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
