--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 <body>
   <button id="theme-toggle">Toggle Theme</button>
   <h1>Hello, world!</h1>
+
+  <form action="https://formspree.io/f/mdaldlrw" method="POST">
+    <label>
+      Your Name:
+      <input type="text" name="name" required>
+    </label>
+    <label>
+      Your Email:
+      <input type="email" name="email" required>
+    </label>
+    <label>
+      Your Message:
+      <textarea name="message" required></textarea>
+    </label>
+    <button type="submit">Send</button>
+  </form>
+
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
