--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - CaPa's Writing house</title>
+  <title data-i18n="privacyPolicyTitle">Privacy Policy - CaPa's Writing house</title>
   <link href='/style.css' rel='stylesheet'>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3292642514548982"
      crossorigin="anonymous"></script>
@@ -12,49 +12,54 @@
 <body>
   <header>
     <nav>
-      <a href="/index.html#hero">Home</a>
-      <a href="/index.html#services">Services</a>
-      <a href="/index.html#contact">Contact</a>
-      <button id="theme-toggle">Toggle Theme</button>
+      <a href="/index.html#hero" data-i18n="navHome">Home</a>
+      <a href="/index.html#services" data-i18n="navServices">Services</a>
+      <a href="/index.html#contact" data-i18n="navContact">Contact</a>
+      <select id="language-switcher">
+        <option value="en">English</option>
+        <option value="ko">한국어</option>
+        <option value="zh">中文</option>
+      </select>
+      <button id="theme-toggle" data-i18n="toggleTheme">Toggle Theme</button>
     </nav>
   </header>
 
   <main>
     <section>
-      <h1>Privacy Policy</h1>
-      <p>Your privacy is important to us. This Privacy Policy explains how CaPa's Writing house collects, uses, and protects your personal information.</p>
+      <h1 data-i18n="privacyPolicyHeading">Privacy Policy</h1>
+      <p data-i18n="privacyP1">Your privacy is important to us. This Privacy Policy explains how CaPa's Writing house collects, uses, and protects your personal information.</p>
 
-      <h2>Information We Collect</h2>
-      <p>We collect information you provide directly to us, such as your name, email address, and message content when you use our contact form. We also collect basic usage data through website analytics to improve our services.</p>
+      <h2 data-i18n="infoCollectHeading">Information We Collect</h2>
+      <p data-i18n="infoCollectP">We collect information you provide directly to us, such as your name, email address, and message content when you use our contact form. We also collect basic usage data through website analytics to improve our services.</p>
 
-      <h2>How We Use Your Information</h2>
-      <p>We use your information to:</p>
+      <h2 data-i18n="howUseInfoHeading">How We Use Your Information</h2>
+      <p data-i18n="howUseInfoP">We use your information to:</p>
       <ul>
-        <li>Respond to your inquiries and provide customer support.</li>
-        <li>Improve our website and services.</li>
-        <li>Communicate with you about your orders or potential services.</li>
+        <li data-i18n="howUseInfo1">Respond to your inquiries and provide customer support.</li>
+        <li data-i18n="howUseInfo2">Improve our website and services.</li>
+        <li data-i18n="howUseInfo3">Communicate with you about your orders or potential services.</li>
       </ul>
 
-      <h2>Data Security</h2>
-      <p>We implement reasonable security measures to protect your personal information from unauthorized access, alteration, disclosure, or destruction. However, no internet transmission is entirely secure.</p>
+      <h2 data-i18n="dataSecurityHeading">Data Security</h2>
+      <p data-i18n="dataSecurityP">We implement reasonable security measures to protect your personal information from unauthorized access, alteration, disclosure, or destruction. However, no internet transmission is entirely secure.</p>
 
-      <h2>Third-Party Services</h2>
-      <p>We use third-party services like Formspree for our contact form and Google AdSense for advertising. These services may collect and process data according to their own privacy policies.</p>
+      <h2 data-i18n="thirdPartyServicesHeading">Third-Party Services</h2>
+      <p data-i18n="thirdPartyServicesP">We use third-party services like Formspree for our contact form and Google AdSense for advertising. These services may collect and process data according to their own privacy policies.</p>
 
-      <h2>Changes to This Policy</h2>
-      <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+      <h2 data-i18n="changesToPolicyHeading">Changes to This Policy</h2>
+      <p data-i18n="changesToPolicyP">We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
-      <h2>Contact Us</h2>
-      <p>If you have any questions about this Privacy Policy, please contact us through our website's contact form.</p>
+      <h2 data-i18n="contactUsHeading">Contact Us</h2>
+      <p data-i18n="contactUsP">If you have any questions about this Privacy Policy, please contact us through our website's contact form.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2026 CaPa's Writing house. All rights reserved.</p>
+    <p data-i18n="footerCopyright">&copy; 2026 CaPa's Writing house. All rights reserved.</p>
     <nav class="footer-nav">
-      <a href="/about.html">About Us</a>
-      <a href="/privacy.html">Privacy Policy</a>
-      <a href="/terms.html">Terms of Service</a>
+      <a href="/about.html?lang=en" data-i18n="footerAbout">About Us</a>
+      <a href="/privacy.html?lang=en" data-i18n="footerPrivacy">Privacy Policy</a>
+      <a href="/terms.html?lang=en" data-i18n="footerTerms">Terms of Service</a>
     </nav>
   </footer>
 
