--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terms of Service - CaPa's Writing house</title>
+  <title data-i18n="termsOfServiceTitle">Terms of Service - CaPa's Writing house</title>
   <link href='/style.css' rel='stylesheet'>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3292642514548982"
      crossorigin="anonymous"></script>
@@ -12,50 +12,55 @@
 <body>
   <header>
     <nav>
-      <a href="/index.html#hero">Home</a>
-      <a href="/index.html#services">Services</a>
-      <a href="/index.html#contact">Contact</a>
-      <button id="theme-toggle">Toggle Theme</button>
+      <a href="/index.html#hero" data-i18n="navHome">Home</a>
+      <a href="/index.html#services" data-i18n="navServices">Services</a>
+      <a href="/index.html#contact" data-i18n="navContact">Contact</a>
+      <select id="language-switcher">
+        <option value="en">English</option>
+        <option value="ko">한국어</option>
+        <option value="zh">中文</option>
+      </select>
+      <button id="theme-toggle" data-i18n="toggleTheme">Toggle Theme</button>
     </nav>
   </header>
 
   <main>
     <section>
-      <h1>Terms of Service</h1>
-      <p>Welcome to CaPa's Writing house! These Terms of Service ("Terms") govern your access to and use of our website and services.</p>
+      <h1 data-i18n="termsOfServiceHeading">Terms of Service</h1>
+      <p data-i18n="termsP1">Welcome to CaPa's Writing house! These Terms of Service ("Terms") govern your access to and use of our website and services.</p>
 
-      <h2>Acceptance of Terms</h2>
-      <p>By accessing or using our services, you agree to be bound by these Terms and our Privacy Policy. If you do not agree to these Terms, please do not use our services.</p>
+      <h2 data-i18n="acceptanceOfTermsHeading">Acceptance of Terms</h2>
+      <p data-i18n="acceptanceOfTermsP">By accessing or using our services, you agree to be bound by these Terms and our Privacy Policy. If you do not agree to these Terms, please do not use our services.</p>
 
-      <h2>Services Provided</h2>
-      <p>CaPa's Writing house provides professional writing assistance for Statements of Purpose, college/university essays, and resumes. Our services are intended to aid you in creating your documents and do not guarantee admission or employment.</p>
+      <h2 data-i18n="servicesProvidedHeading">Services Provided</h2>
+      <p data-i18n="servicesProvidedP">CaPa's Writing house provides professional writing assistance for Statements of Purpose, college/university essays, and resumes. Our services are intended to aid you in creating your documents and do not guarantee admission or employment.</p>
 
-      <h2>User Responsibilities</h2>
-      <p>You agree to provide accurate and complete information when using our services. You are responsible for reviewing and approving all final drafts of documents provided by us. You agree not to use our services for any unlawful or prohibited activities.</p>
+      <h2 data-i18n="userResponsibilitiesHeading">User Responsibilities</h2>
+      <p data-i18n="userResponsibilitiesP">You agree to provide accurate and complete information when using our services. You are responsible for reviewing and approving all final drafts of documents provided by us. You agree not to use our services for any unlawful or prohibited activities.</p>
 
-      <h2>Intellectual Property</h2>
-      <p>The content and materials provided on our website are owned by CaPa's Writing house or its licensors and are protected by intellectual property laws. You may not reproduce, distribute, or create derivative works from our content without express written permission.</p>
+      <h2 data-i18n="intellectualPropertyHeading">Intellectual Property</h2>
+      <p data-i18n="intellectualPropertyP">The content and materials provided on our website are owned by CaPa's Writing house or its licensors and are protected by intellectual property laws. You may not reproduce, distribute, or create derivative works from our content without express written permission.</p>
 
-      <h2>Limitation of Liability</h2>
-      <p>CaPa's Writing house will not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of your use of, or inability to use, our services.</p>
+      <h2 data-i18n="limitationOfLiabilityHeading">Limitation of Liability</h2>
+      <p data-i18n="limitationOfLiabilityP">CaPa's Writing house will not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of your use of, or inability to use, our services.</p>
 
-      <h2>Changes to Terms</h2>
-      <p>We reserve the right to modify these Terms at any time. We will notify you of any changes by posting the new Terms on this page. Your continued use of the services after such changes constitutes your acceptance of the new Terms.</p>
+      <h2 data-i18n="changesToTermsHeading">Changes to Terms</h2>
+      <p data-i18n="changesToTermsP">We reserve the right to modify these Terms at any time. We will notify you of any changes by posting the new Terms on this page. Your continued use of the services after such changes constitutes your acceptance of the new Terms.</p>
 
-      <h2>Governing Law</h2>
-      <p>These Terms shall be governed by and construed in accordance with the laws of [Your Country/State], without regard to its conflict of law provisions.</p>
+      <h2 data-i18n="governingLawHeading">Governing Law</h2>
+      <p data-i18n="governingLawP">These Terms shall be governed by and construed in accordance with the laws of [Your Country/State], without regard to its conflict of law provisions.</p>
 
-      <h2>Contact Information</h2>
-      <p>For any questions regarding these Terms, please contact us via our website's contact form.</p>
+      <h2 data-i18n="contactInfoHeading">Contact Information</h2>
+      <p data-i18n="contactInfoP">For any questions regarding these Terms, please contact us via our website's contact form.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2026 CaPa's Writing house. All rights reserved.</p>
+    <p data-i18n="footerCopyright">&copy; 2026 CaPa's Writing house. All rights reserved.</p>
     <nav class="footer-nav">
-      <a href="/about.html">About Us</a>
-      <a href="/privacy.html">Privacy Policy</a>
-      <a href="/terms.html">Terms of Service</a>
+      <a href="/about.html?lang=en" data-i18n="footerAbout">About Us</a>
+      <a href="/privacy.html?lang=en" data-i18n="footerPrivacy">Privacy Policy</a>
+      <a href="/terms.html?lang=en" data-i18n="footerTerms">Terms of Service</a>
     </nav>
   </footer>
 
